--- a/index.html
+++ b/index.html
@@ -22,69 +22,69 @@
 <title>Web Components</title>
 </head>
 <body>
-<ui-focus></ui-focus>
-<ui-app>
-  <ui-layout>
+<ui-root>
+  <ui-focus></ui-focus>
+  <ui-app>
+    <ui-layout>
 
-    <ui-sidebar>
-      <div>
-        <span class="version"></span>
-      </div>
-      <nav>
-        <ul>
-    <!-- essentials -->
-          <li class="nav-category" data-nav-category="essentials">
-            <div class="menu-title">Essentials</div>
-          </li>
-    <!-- design tokens -->
-          <li class="nav-category" data-nav-category="tokens">
-            <div class="menu-title">Design Tokens</div>
-          </li>
-    <!-- variant, tone, elevation, radius -->
-          <li class="nav-category" data-nav-category="theme">
-            <div class="menu-title">Theme</div>
-          </li>
-    <!-- stack, grid, container, section, split -->
-          <li class="nav-category" data-nav-category="layout">
-            <div class="menu-title">Layout</div>
-          </li>
-    <!-- divider, icon, line, spacer, text -->
-          <li class="nav-category" data-nav-category="primitives">
-            <div class="menu-title">Primitives</div>
-          </li>
-    <!-- button, input, select, modal, tooltip -->
-          <li class="nav-category" data-nav-category="forms">
-            <div class="menu-title">Forms</div>
-          </li>
-    <!-- accordion, tabs, breadcrumb,  -->
-          <li class="nav-category" data-nav-category="components">
-            <div class="menu-title">Components</div>
-          </li>
-    <!-- portal, focus, observer, resize-handler -->
-          <li class="nav-category" data-nav-category="utilities">
-            <div class="menu-title">Utilities</div>
-          </li>
-        </ul>
-      </nav>
-    </ui-sidebar>
+      <ui-sidebar>
+        <div>
+          <span class="version"></span>
+        </div>
+        <nav>
+          <ul>
+      <!-- essentials -->
+            <li class="nav-category" data-nav-category="essentials">
+              <div class="menu-title">Essentials</div>
+            </li>
+      <!-- design tokens -->
+            <li class="nav-category" data-nav-category="tokens">
+              <div class="menu-title">Design Tokens</div>
+            </li>
+      <!-- variant, tone, elevation, radius -->
+            <li class="nav-category" data-nav-category="theme">
+              <div class="menu-title">Theme</div>
+            </li>
+      <!-- stack, grid, container, section, split -->
+            <li class="nav-category" data-nav-category="layout">
+              <div class="menu-title">Layout</div>
+            </li>
+      <!-- divider, icon, line, spacer, text -->
+            <li class="nav-category" data-nav-category="primitives">
+              <div class="menu-title">Primitives</div>
+            </li>
+      <!-- button, input, select, modal, tooltip -->
+            <li class="nav-category" data-nav-category="forms">
+              <div class="menu-title">Forms</div>
+            </li>
+      <!-- accordion, tabs, breadcrumb,  -->
+            <li class="nav-category" data-nav-category="components">
+              <div class="menu-title">Components</div>
+            </li>
+      <!-- portal, focus, observer, resize-handler -->
+            <li class="nav-category" data-nav-category="utilities">
+              <div class="menu-title">Utilities</div>
+            </li>
+          </ul>
+        </nav>
+      </ui-sidebar>
 
-    <ui-main>
-      <header>
-        <ui-button id="toggle-mode" shape="square" size="small">
-          <button>
+      <ui-main>
+        <header>
+          <ui-button id="toggle-mode" shape="square" size="small">
             <ui-icon name=""></ui-icon>
-          </button>
-        </ui-button>
-      </header>
-      <main>
-        <article></article>
-      </main>
-      <footer></footer>
-    </ui-main>
+          </ui-button>
+        </header>
+        <main>
+          <article></article>
+        </main>
+        <footer></footer>
+      </ui-main>
 
-  </ui-layout>
-</ui-app>
-<ui-portal></ui-portal>
+    </ui-layout>
+  </ui-app>
+  <ui-portal></ui-portal>
+</ui-root>
 
 <script>
   const btn = document.getElementById('toggle-mode');
