--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
       <ui-main>
         <header>
-          <ui-button id="toggle-mode" shape="square" size="small">
+          <button id="toggle-mode" shape="square" size="small">
             <ui-icon name=""></ui-icon>
-          </ui-button>
+          </button>
         </header>
         <main>
           <article></article>
