--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <script>
-  window.mode = localStorage.getItem('mode') || 'dark';
-  document.documentElement.dataset.mode = window.mode;
+(()=>{
+  let scheme = localStorage.getItem('data-color-scheme');
+  if(scheme !== 'dark' && scheme !== 'light'){
+    scheme = 'dark';
+    localStorage.setItem('data-color-scheme',scheme);
+  }
+  document.documentElement.setAttribute('data-color-scheme',scheme);
+})();
 </script>
 <link rel="stylesheet" href="./ui/styles/base.css">
-<link rel="stylesheet" href="./ui/styles/typography.css">
-<link rel="stylesheet" href="./ui/styles/layouts/columns.css">
 <link rel="stylesheet" href="./ui/styles/colors.css">
-<link rel="stylesheet" href="" id="mode-style">
-<script>
-  document.getElementById('mode-style').href = `./ui/styles/modes/${window.mode}.css`;
-</script>
+<link rel="stylesheet" href="./ui/styles/color-schemes/dark.css">
+<link rel="stylesheet" href="./ui/styles/color-schemes/light.css">
 <link rel="stylesheet" href="./ui/styles/core.css">
+<link rel="stylesheet" href="./ui/styles/layouts/columns.css">
 <link rel="stylesheet" href="./assets/app.css">
 <link rel="stylesheet" href="./ui/styles/components.css">
+
+<script type="module" src="./ui/lit-core.min.js"></script>
+
 <link rel="icon" href="data:,">
 <title>Web Components</title>
 </head>
@@ -71,9 +77,7 @@
 
       <ui-main>
         <header>
-          <button id="toggle-mode" shape="square" size="small">
-            <ui-icon name=""></ui-icon>
-          </button>
+          <ui-color-scheme></ui-color-scheme>
         </header>
         <main>
           <article></article>
@@ -85,30 +89,6 @@
   </ui-app>
   <ui-portal></ui-portal>
 </ui-root>
-
-<script>
-  const btn = document.getElementById('toggle-mode');
-  const themeLink = document.getElementById('mode-style');
-
-  if(btn){
-    const icon = btn.querySelector('ui-icon');
-    let currentMode = document.documentElement.dataset.mode;
-
-    if(icon){
-      icon.setAttribute('name', currentMode === 'dark' ? 'light-mode' : 'dark-mode');
-    }
-
-    btn.addEventListener('click', () => {
-      currentMode = currentMode === 'dark' ? 'light' : 'dark';
-      document.documentElement.dataset.mode = currentMode;
-      localStorage.setItem('mode',currentMode);
-      themeLink.href = `./ui/styles/modes/${currentMode}.css`;
-
-      if(themeLink) themeLink.href = `./ui/styles/modes/${currentMode}.css`;
-      if(icon) icon.setAttribute('name', currentMode === 'dark' ? 'light-mode' : 'dark-mode');
-    });
-  }
-</script>
 <script type="module">
   import {getVersion} from './assets/version.js';
 
